--- a/style.css
+++ b/style.css
@@ -1,14 +1,51 @@
 html,body{
     height: 100%;
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
+
+.header{
+    background-image: url(./assets/foto-header.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 160px;
+    margin: 0px;
+    text-align: left;
+    font-size: xx-large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: white;
+}
+
+#container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-image: url(./assets/europe.jpg);
+}
+
+
 
 .nation-div{
     border: 1px solid;
-    margin: 16px;
-    padding: 8px;
-
+    margin: 12px;
+    padding: 16px;
+    background-color: rgba(0, 0, 0, 0.803);
+    border-radius: 4px 20px 20px 20px;
+    color: white;
 }
 
+.flag{
+    width: 100px;
+    text-align: center;
+}
+
+.un-member{
+    border-radius: 4px;
+}
+
+
+.sorting-button{
+    margin: 8px;
+    height: 32px;
+}
