--- a/style.css
+++ b/style.css
@@ -49,3 +49,20 @@ html,body{
     margin: 8px;
     height: 32px;
 }
+
+.footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 188px;
+    background-color: black;
+    width: 100%;
+    position: absolute;
+    color: white;
+    justify-items: center;
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
